# 5ibr-adguard-filter

./: .gitignore  AUDIT_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_MASTER_CONTEXT.md  README.md  ROADMAP.md  SECURITY.md  fivebr.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  python.yml
config/: categories.json  database.json  releases.json  signatures.json  vendors.json
database/: domains.csv
docs/: filter-guidelines.md  review-workflow.md  rule-review-process.md  services-architecture.md
docs/adr/: ADR-001-csv-instead-of-sqlite.md  ADR-002-command-registry.md  ADR-003-services-layer.md  ADR-004-metadata-preservation.md
docs/releases/: v1.0.0-beta.md
docs/specs/: cli-spec.md  csv-schema.md  filter-format.md  review-workflow.md
filters/: ads.txt  adult.txt  gaming.txt  mobile.txt  privacy.txt  smart-tv.txt  social.txt  telemetry.txt  whitelist.txt
releases/: all.txt  family.txt  gaming.txt  home.txt  privacy.txt  strict-family.txt
scripts/: add.py  analyze_querylog.py  build.py  classifier.py  cli.py  config.py  database.py  doctor.py  export_cmd.py  filter_loader.py  fix.py  html_report.py  import_cmd.py  list_cmd.py  normalize.py  remove.py  report.py  review.py  search.py  stats.py  update.py  validate.py  version.py
scripts/builders/: config.py  (+3 more)
tests/: test_classifier.py  test_cli.py  test_database.py  test_filter_loader.py  test_filters.py  test_phase2_commands.py  test_phase3_services.py  test_update.py  test_validate.py
(+4 files in other folders)
